syntax="proto3";

option go_package="./";//path dena h

package greeter;

message HelloRequest{
    string SomeString=1;
}

message HelloResponse{
    string Reply=1;
} 

service Example{
    rpc ServerReply (HelloRequest) returns (HelloResponse);
}